--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 </head>
 <body>
     <h1>🚧 En construcción 🚧</h1>
-    <img src="WhatsApp Image 2025-08-15 at 5.02.11 PM.jpeg" alt="Página en construcción">
+    <img src="imagen.jpeg" alt="Página en construcción">
 </body>
 
 </html>
+
