--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 </head>
 <body>
     <h1>🚧 En construcción 🚧</h1>
-    <img src="https://github.com/EduardoPH00/pagina-construccion/blob/4ff0533f2d4de329f1804227af4923245e351cb0/imagen.jpeg" alt="Página en construcción">
+    <img src="imagen.jpeg" alt="Página en construcción">
 </body>
 
 </html>
+
 
 
 
