--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 </head>
 <body>
     <h1>🚧 En construcción 🚧</h1>
-    <img src="https://github.com/EduardoPH00/pagina-construccion/blob/8b1bed2137359a04b9206a090c02c6827e31af06/imagen.jpeg" alt="Página en construcción">
+    <img src="./imagen.jpeg" alt="Página en construcción">
 </body>
 
 </html>
+
 
 
 
